# music-exploration

./: pyproject.toml
src/: app.py  main.py
src/static/: style.css
src/templates/: index.html
